package org.example;

abstract class Program {
    abstract boolean shouldTerminate();
    abstract void execute();
}